build: revert ZGC and heap inflation from gradle update (#2446)